incluindo atributo target="_blank"

--- a/sharepoint.html
+++ b/sharepoint.html
@@ -1,4 +1,4 @@
-<a href="{{link}}">
+<a href="{{link}}" target="_blank">
   <svg style="width: 36px; height: auto;" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 64 64">
     <circle cx="29.926" cy="20.593" r="15.556" fill="#036c70" />
     <circle cx="45.481" cy="35.111" r="13.481" fill="#1a9ba1" />
